added a ton of stuff

--- a/cisco/index.html
+++ b/cisco/index.html
@@ -52,108 +52,138 @@
 	<article id="main">
 		<header class="style7">
 			<h2>Cisco<span class="x">&times;</span>WAE</h2>
-<!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
--->					</header>
-<section class="wrapper style5">
-	<div class="inner">
-		<div class="row">
-			<div class="12u 12u$(medium)">
-				<h4>WAE API Engineer</h4>
+			<!-- <p>(WAN Automation Engine)</p> -->
+		</header>
+		<section class="wrapper style5">
+			<div class="inner">
+				<div class="row">
+					<div class="12u 12u$(medium)">
+						<h4>WAE API Engineer</h4>
+					</div>
+				</div>
+				<div class="row">
+					<div class="6u 12u(medium)">
+						<p>
+							In my first position at Cisco I worked on creating and documenting REST API's in the Wide Area Network (WAN) Orchestration product group.
+							The WAN Automation Engine (WAE) is a set of web API's designed to provide bandwidth orchestration capability for a Wide Area Network in the Service Provider environment. 
+						</p>
+
+
+
+					</div>
+					<div class="6u 12u(medium)">
+						<p>
+							Our API's were designed for use by a developer working in an organization that provides network services. Much of my job was figuring out the best way to deliver these API's to them and make them <strong>as easy to use as possible</strong>. 
+						</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="12u$">
+
+						<p>
+							I approached designing the best experience for these developers by:
+<!-- 
+							Integrating an API documentation plug-in into our build. This allowed for more streamlined documentation to be delivered to our developers.
+
+							Analyzing the tools that developers use for using and developing API's. In this process I discovered SOAPUI and Postman to be commonly used tools.
+
+							Generating lots of JSON examples and use cases. This included creating scripts using SOAPUI to completely build out these use cases. -->
+						</p>		
+					</div>	
+				</div>
+				<div class="row">
+					<div class="12u$">
+						<h4>01</h4>
+						<p>
+							Creating a public-facing tutorial for using our API's. Designed and implemented a web page to do so. See the full web page at 
+							<a href="https://developer.cisco.com/site/wae/documentation/tutorial/">developer.cisco.com/site/wae/documentation/tutorial/</a>
+						</p>
+						<span class="image fit"><img src="images/documentation.jpg" alt=""/></span>
+						<p>
+							<a href="https://developer.cisco.com/site/wae/documentation/tutorial/">developer.cisco.com/wae/tutorial</a>
+						</p>
+
+					</div>		
+				</div>
+				<div class="row">
+					<div class="12u$">
+						<h4>02</h4>
+						<p>
+							Integrating an API documentation plug-in into our build. This allowed for more streamlined documentation to be delivered to our developers.
+						</p>
+						<span class="image fit"><img src="images/ennunciate.jpg" alt=""/></span>
+						<p>
+							<a href="https://developer.cisco.com/site/wae/documentation/api-release-6-1/platform-rest-api/">developer.cisco.com/wae/documentation/platform-rest-api/</a>
+						</p>
+
+					</div>		
+				</div>
+
 			</div>
-		</div>
-		<div class="row">
-			<div class="6u 12u(medium)">
-				<p>
-					In my first position at Cisco I worked on creating and documenting REST API's in the Wide Area Network (WAN) Orchestration product group.
-					The WAN Automation Engine (WAE) is a set of web API's designed to provide bandwidth orchestration capability for a Wide Area Network in the Service Provider environment. 
-				</p>
 
-
-
-			</div>
-			<div class="6u 12u(medium)">
-				<p>
-					Our API's were designed for use by a developer working in an organization that provides network services. Much of my job was figuring out the best way to deliver these API's to them and make them <strong>as easy to use as possible</strong>. 
-				</p>
-			</div>
-		</div>
-		<div class="row">
-			<p>
-				I approached designing the best experience for these developers by:
-				<ol>
-					<li><b>Integrating an API documentation plug-in into our build.</b> This allowed for more streamlined documentation to be delivered to our developers.</li> 
-
-					<li><b>Analyzing the tools that developers use for using and developing API's.</b> In this process I discovered SOAPUI and Postman to be commonly used tools.</li> 
-
-					<li><b>Generating lots of JSON examples and use cases.</b> This included creating scripts using SOAPUI to completely build out these use cases.</li>	
-				</ol>
-			</p>			
-		</div>
-	</div>
-
-</div></section>
+		</div></section>
 <!-- <iframe src="https://developer.cisco.com/site/wae/documentation/tutorial/#wan-automation-engine-wae-tutorial" style="
-width: 90%; margin-left: 5%; overflow-x: hidden; overflow-y:scroll; min-height:640px; box-shadow: -1px 1px 0 #ddd; background-color: #ddd; "></iframe> -->
-<section class="wrapper style5">
-	<div class="inner">
-		<div class="row">
-			<div class="12u 12u(medium">
-				<h4>External Links</h4>
-				<ul class="actions ">
-					<li><a href="https://developer.cisco.com/site/wae/documentation/tutorial/#wan-automation-engine-wae-tutorial" class="button ">A WAE Tutorial</a></li>
-					<li><a href="https://developer.cisco.com/site/wae/tools/soap-ui-scripts/#using-soapui-with-wae-a-tutorial" class="button ">Our SoapUI API User Guide</a></li>
-					<li><a href="https://developer.cisco.com/fileMedia/download/26c5b701-3a2e-4174-b53f-501a45518d59" class="button ">Postman Sample JSON</a></li>
-					<li><a href="https://developer.cisco.com/fileMedia/download/6622761e-ffdf-4fdf-90b2-bf8a25563b13" class="button ">SOAPUI Scripts</a></li>
-				</ul>
+	width: 90%; margin-left: 5%; overflow-x: hidden; overflow-y:scroll; min-height:640px; box-shadow: -1px 1px 0 #ddd; background-color: #ddd; "></iframe> -->
+	<section class="wrapper style5">
+		<div class="inner">
+			<div class="row">
+				<div class="12u 12u(medium">
+					<h4>External Links</h4>
+					<ul class="actions ">
+						<li><a href="https://developer.cisco.com/site/wae/documentation/tutorial/#wan-automation-engine-wae-tutorial" class="button ">A WAE Tutorial</a></li>
+						<li><a href="https://developer.cisco.com/site/wae/tools/soap-ui-scripts/#using-soapui-with-wae-a-tutorial" class="button ">Our SoapUI API User Guide</a></li>
+						<li><a href="https://developer.cisco.com/fileMedia/download/26c5b701-3a2e-4174-b53f-501a45518d59" class="button ">Postman Sample JSON</a></li>
+						<li><a href="https://developer.cisco.com/fileMedia/download/6622761e-ffdf-4fdf-90b2-bf8a25563b13" class="button ">SOAPUI Scripts</a></li>
+					</ul>
+				</div>
 			</div>
-		</div>
 
-		<div class="row">
-			<div class="6u 12u(medium)">
-				<h4>UI Engineer</h4>
+			<div class="row">
+				<div class="6u 12u(medium)">
+					<h4>UI Engineer</h4>
+					<p>
+						In my second role at Cisco I worked as a UI Engineer. The project I worked on was a visualization tool for the WAE web API's that I helped to create in  my previous position. This role involved utilized HTML, CSS and Javascript–more specifically javascript libraries/frameworks including NodeJS, BackboneJS & HighchartsJS. 
+					</p>
+					<p>
+						In this role I continued to try to give the best experience to these developers that would be using the application. I put a lot of energy in particular into working on this configuration page that you see below.
+					</p>
+				</div>
+				<div class="6u$ 12u$(medium)">
+					<span class="image fit"><img src="images/mate-ui.png" alt=""/></span>
+				</div>
+				<span class="image fit"><img src="images/development.png" alt=""/></span>
+				<div class="6u 12u(medium)">
+					<span class="image fit"><img src="images/dropdown.png" alt=""/></span>
+
+				</div>
+				<div class="3u$ 12u$(medium)">
+					<span class="image fit"><img src="images/tooltip.png" alt=""/></span>
+				</div>
 				<p>
-					In my second role at Cisco I worked as a UI Engineer. The project I worked on was a visualization tool for the WAE web API's that I helped to create in  my previous position. This role involved utilized HTML, CSS and Javascript–more specifically javascript libraries/frameworks including NodeJS, BackboneJS & HighchartsJS. 
+					Me and my team were finding that <b>developers that did not have a complete knowledge of our ecosystem had a hard time setting up our application.</b> As someone who had worked on the much of the documentation and creation of the API's I empathized with these developers and strived to make that information as visible as possible in the application. I did so by:
 				</p>
-				<p>
-					In this role I continued to try to give the best experience to these developers that would be using the application. I put a lot of energy in particular into working on this configuration page that you see below.
-				</p>
+
+				<ol>
+					<li><b>Creating a comprehensive "Help" section of the site.</b>
+
+						<li><b>Creating tooltip UI's for assisting users in the interface itself.</li> 
+					</ol>	
+
+				</div>
 			</div>
-			<div class="6u$ 12u$(medium)">
-				<span class="image fit"><img src="images/mate-ui.png" alt=""/></span>
-			</div>
-			<span class="image fit"><img src="images/development.png" alt=""/></span>
-			<div class="6u 12u(medium)">
-				<span class="image fit"><img src="images/dropdown.png" alt=""/></span>
+		</section>
 
-			</div>
-			<div class="3u$ 12u$(medium)">
-				<span class="image fit"><img src="images/tooltip.png" alt=""/></span>
-			</div>
-			<p>
-				Me and my team were finding that <b>developers that did not have a complete knowledge of our ecosystem had a hard time setting up our application.</b> As someone who had worked on the much of the documentation and creation of the API's I empathized with these developers and strived to make that information as visible as possible in the application. I did so by:
-			</p>
+	</article>
 
-			<ol>
-				<li><b>Creating a comprehensive "Help" section of the site.</b></li> 
-
-				<li><b>Creating tooltip UI's for assisting users in the interface itself.</li> 
-			</ol>	
-
-		</div>
-	</div>
-</section>
-
-</article>
-
-<!-- Footer -->
-<footer id="footer">
-	<ul class="icons">
-		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-		<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
-		<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-		<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
-	</ul>
-</footer>
+	<!-- Footer -->
+	<footer id="footer">
+		<ul class="icons">
+			<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+			<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
+			<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
+		</ul>
+	</footer>
 
 </div>
 
