--- a/givjoy/index.html
+++ b/givjoy/index.html
@@ -105,7 +105,7 @@
 				<p>The affinity mapping exercise also revealed that we would need to do more research to <strong>validate our hypotheses</strong>. Together we needed to validate with real people whether the joy bringing platform would be a viable idea. We needed to figure out "What incites joy in people?", "Should gift-giving be part of our solution?" and "What motivation do people have in giving joy?"</p>
 
 				<div class="row">
-					<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/user-groups.png" alt="" /></span></div>
+					<!-- <div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/user-groups.png" alt="" /></span></div> -->
 					<div class=" 6u$ 12u$(medium)"><blockquote>We decided that the scope of the hackthon would be designing a user flow for the <strong>joy-sender</strong>. Much of the research we needed to do had to identify what was important to our user flow on the side of the joy-sender. </blockquote></div>
 				</div>
 
@@ -184,15 +184,17 @@
 <!-- Footer -->
 <footer id="footer">
 	<ul class="icons">
+		<a class="icon" href="../perforce">02. Perforce</a>
+		<a class="icon">—</a>
+		<a class="icon" href="../cisco">04. Cisco</a>
+	</ul>
+	<ul class="icons">
 		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
 		<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
 		<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 		<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
 	</ul>
-	<!-- <ul class="copyright">
-		<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
-	</ul>
---></footer>
+</footer>
 
 </div>
 
