--- a/perforce/index.html
+++ b/perforce/index.html
@@ -60,17 +60,17 @@
 		<div class="row">
 			<div class="7u 12u(medium)">
 				<h4>Helix Sync</h4>
-				<p>In my position at Perforce as a UX Designer my employment was structured in such a way that design & research were conducted in 1-month product rotations. 
+				<p>In my position at Perforce as a UX Designer my employment was structured in such a way that design & research were conducted in 1-month product rotations.
 				</p>
-				<p>My first project rotation involved working on an early stage product called <b>Helix Sync</b>. My first task was to create a concept prototype for the product to elicit early feedback from our users. Using task analysis with the prototype and user interviews we were able to get some early insight on the direction of our product.
+				<p>My first project rotation involved working on an early stage product called Helix Sync. My first task was to create a concept prototype for the product to elicit early feedback from our users. Using task analysis with the prototype and user interviews we were able to get some early insight on the direction of our product.
 				</p>
 				<h4>my role</h4>
 				<p>My main role on this project involved creating the visual designs and prototype. In the user research phase I worked closely with another designer to help schedule and facilitate most of the sessions. I also led group synthesis sessions at the end of the project.
 				</p>
 			</div>
 			<div class="5u 12u$(medium)">
-				<h4>a brief history</h4>
-				<span class="image right "><img src="images/perforce-logo.jpg" alt=""/></span>
+				<h4>The Problem</h4>
+				<!-- <span class="image right "><img src="images/perforce-logo.jpg" alt=""/></span> -->
 				<p><a href="https://perforce.com">Perforce</a> has been a leader in the version control industry since they premiered their <a href="https://www.youtube.com/watch?v=_yQlKEq-Ueg">centralized</a> versioning engine in 1995.
 				</p>
 				<p>Since the arrival of <a href="https://en.wikipedia.org/wiki/Distributed_revision_control">DVCS</a> versioning tools, most notably Git and Github, Perforce has struggled to stay relevant to their users. Recently they have found their niche by appealing to the game development community. 
@@ -213,16 +213,27 @@
 
 <!-- Footer -->
 <footer id="footer">
+	<ul class="icons small">
+		<p>MORE CASE STUDIES</p>
+	</ul>
 	<ul class="icons">
+		<a class="icon" href="../wrap">
+			<span class="icon small fa-angle-left"></span>
+			<span class="icon">Wrap Media</span>
+		</a>
+		<a class="icon">—</a>
+		<a class="icon" href="../givjoy">
+			<span class="icon">Givjoy
+			<span class="icon small fa-angle-right"></span>
+		</a>
+	</ul>
+	<ul class="icons small">
 		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
 		<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
 		<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 		<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
 	</ul>
-	<!-- <ul class="copyright">
-		<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
-	</ul>
---></footer>
+</footer>
 
 </div>
 
