--- a/index.html
+++ b/index.html
@@ -50,16 +50,14 @@
 		</header>
 
 		<!-- Banner -->
-		<section id="banner">
-			<div class="banner blur">
+		<section  id="banner">
 				<div class="inner">
 					<h2>Eric S.<br/>UI <span class="x">&times;</span> UX</h2>
 					<p></p>
 				</div>
 				<div class="trigger"></div>
 
-				<a href="#one" class="more scrolly">Learn More</a>
-			</div>
+				<!-- <a href="/#one" class="more scrolly">Learn More</a> -->
 		</section> 
 
 		<!-- One -->
@@ -67,144 +65,145 @@
 			<div class="inner">
 				<header class="major">
 					<h2>Hi there. I'm Eric!</h2>
-					<p><br/>I'm a UX Designer and UI Engineer located in the SF Bay Area. I've coded this site with my own two hands as a way to showcase my work. Below you'll find some case studies I've worked on. For more code samples check out my github. When im not designing or coding I'm either taking photos or out enjoying some nature.
-					</p><p>
-					For me UX is the perfect intersection of Computer Science, Customer Service and Creative Thinking. My background in engineering and design allows me to act a bridge in communication for both designers & engineers. My experience working in a cooperative has also given me skills to excel in any team environment.
-				</p>
-			</header>
-		</div>
-	</section>
+					<p>
+						I'm a UX Designer and UI Engineer located in the SF Bay Area. I've coded this site with my own two hands as a way to showcase my work. Below you'll find some case studies I've worked on. For more code samples check out my github. When im not designing or coding I'm either taking photos or out enjoying some nature.
+					</p>
+					<p>
+						For me UX is the perfect intersection of Computer Science, Customer Service and Creative Thinking. My background in engineering and design allows me to act a bridge in communication for both designers & engineers. My experience working in a cooperative has also given me skills to excel in any team environment.
+					</p>
+				</header>
+			</div>
+		</section>
 
-	<!-- Two -->
-	<section id="two" class="wrapper style5">
-		<div class="inner">
-			<section class="spotlight">
-				<div class="image"><img src="wrap/images/case-study-image.png" alt=""/></div><div class="content">
-				<h2>UX/UI Design: Wrap Media</h2>
-					<!-- <ul class="actions labels">
-					<li>
-						ui
-					</li>
-					<li>
-						ux
-					</li>
-					<li>
-						engineering
-					</li>
-					<label>ui</label>
-				</ul> -->
-				<p>Created interactive mobile web experiences “aka. Wraps” on the Wrap platform. Worked as a Front-End Engineer on the visual design side of our website. Brought on as designer number 2 and fostered growth of design culture within the startup.</p>
-				<ul class="actions">
-					<li><a href="wrap/" class="button fit">Learn More</a></li>
-				</ul>
-			</div>
-		</section>
-		<section class="spotlight">
-			<div class="image"><img src="perforce/images/case-study-image.png" alt=""/></div><div class="content">
-			<h2>UX Design:
-				Helix Product Suite</h2>
-				<p>The Helix product suite is a collection of projects that I worked on at Perforce. The goal of these projects was to create version control tools for the less technical user.</p>
-				<!-- My goals for this project we're to increase accessibility -->
-				<ul class="actions">
-					<li><a href="perforce/" class="button fit">Learn More</a></li>
-				</ul>
-			</div>
-		</section>
-		<section class="spotlight">
-			<div class="image"><img src="givjoy/images/case-study-image.png" alt="" /></div><div class="content">
-			<h2>Mobile Design:<br />
-				ProtoHack &times; GivJoy</h2>
-				<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
-				<ul class="actions">
-					<li><a href="givjoy/" class="button fit">Learn More</a></li>
-				</ul>
-			</div>
-		</section>
-		<section class="spotlight">
-			<div class="image"><img src="google-design/images/case-study-image.png" alt="" /></div><div class="content">
-			<h2>Interaction Design:<br />
+		<!-- Two -->
+		<section id="two" class="wrapper style5">
+			<!-- <div class="inner"> -->
+				<section class="spotlight style-wrap ">
+					<!-- <div class="image"><img src="wrap/images/case-study-image.png" alt=""/></div> -->
+					<div class="content">
+						<h2>UI/UX Design — Wrap Media</h2>
+						<p>Created interactive mobile web experiences “aka. Wraps” on the Wrap platform. Worked as a Front-End Engineer on the visual design side of our website. Brought on as designer number 2 and fostered growth of design culture within the startup.</p>
+						<ul class="actions">
+							<li><a href="wrap/" class="button fit">Learn More</a></li>
+						</ul>
+					</div>
+				</section>
+				<section class="spotlight style-perforce">
+					<!-- <div class="image"><img src="perforce/images/case-study-image.png" alt=""/></div> -->
+					<div class="content">
+						<h2>UX Design —
+							Helix Product Suite</h2>
+							<p>The Helix product suite is a collection of projects that I worked on at Perforce. The goal of these projects was to create version control tools for the less technical user.</p>
+							<!-- My goals for this project we're to increase accessibility -->
+							<ul class="actions">
+								<li><a href="perforce/" class="button fit">Learn More</a></li>
+							</ul>
+						</div>
+					</section>
+					<section class="spotlight style-givjoy">
+						<!-- <div class="image"><img src="givjoy/images/case-study-image.png" alt="" /></div> -->
+						<div class="content">
+							<h2>Mobile Design —<br />
+								ProtoHack & GivJoy</h2>
+								<p>GivJoy is a mobile application and marketplace for spreading joy to others. GivJoy was created in 9 hours during ProtoHack SF, a code-free hackathon.</p>
+								<ul class="actions">
+									<li><a href="givjoy/" class="button fit">Learn More</a></li>
+								</ul>
+							</div>
+						</section>
+
+						<section class="spotlight style-scholastic">
+							<!-- <div class="image"><img src="scholastic/images/Eric/case-study-image.png" alt=""/></div> -->
+							<div class="content">
+								<h2>UX Strategy —<br />
+									Scholastic</h2>
+									<p>My team and I were asked to take advantage of digital technology to encourage children to read books outside of school. We came up with two features that could be seamlessly integrated into Scholastic's existing website.</p>
+									<ul class="actions">
+										<li><a href="scholastic/" class="button fit">Learn More</a></li>
+									</ul>
+								</div>
+							</section>
+							<section class="spotlight style-cisco">
+								<!-- <div class="image"><img src="cisco/images/case-study-image.png" alt="" /></div> -->
+								<div class="content">
+									<h2>UI Engineering —
+										Cisco</h2>
+										<p>My second position at Cisco involved creating web UI using HTML, CSS & Javascript. In my first role I created API documentation to assist developers in using out product.</p>
+										<ul class="actions">
+											<li><a href="cisco/" class="button fit">Learn More</a></li>
+										</ul>
+									</div>
+								</section>
+								<section class="spotlight style-meet-eat">
+									<!-- <div class="image"> -->
+									<!-- <img src="https://raw.githubusercontent.com/erchsm/M-E/master/screenshots/case-study-image.png" alt="" /></div> -->
+									<div class="content">
+									<h2>Mobile Design — M&E</h2>
+									<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat. Our target audience was college students. The application allows users to plan meetups using scales such as time, date and location preferences.</p>
+									<ul class="actions">
+										<li><a href="https://github.com/erchsm/M-E/blob/master/README.md" class="button fit">Learn More</a></li>
+									</ul>
+								</div>    
+							</section>
+							<section class="spotlight style-box">
+								<!-- <div class="image"><img src="box/images/case-study-image.png" alt="" /></div> -->
+								<div class="content">
+									<h2>Chrome Extension — Box Secure Sharing</h2>
+									<p>This Chrome Extension is designed for two Box users to securely transfer files. This was an exercise in using the Box API and crafting a experience that allows the users feel secure in transfering their files.</p>
+									<ul class="actions">
+										<li><a href="box/" class="button fit">Learn More</a></li>
+									</ul>
+								</div>
+							</section>
+						<!-- </div> -->
+					</section>
+
+					<!-- 		<section class="spotlight style-google">
+			<div class="image"><img src="google-design/images/case-study-image.png" alt="" /></div>
+			<div class="content">
+			<h2>Interaction Design —<br />
 				Google Design Challenge</h2>
 				<p>Preparing your own garage sale is often a daunting task. It’s also difficult for potential buyers to discover your merchandise. I designed an experience that makes it easier for sellers to intelligently inventory their goods, and helps bargain hunters find the needle in a haystack.</p>
 				<ul class="actions">
 					<li><a href="google-design/" class="button fit">Learn More</a></li>
 				</ul>
 			</div>
-		</section>
-		<section class="spotlight">
-			<div class="image"><img src="scholastic/images/Eric/case-study-image.png" alt="" /></div><div class="content">
-			<h2>UX Strategy:<br />
-				Scholastic</h2>
-				<p>My team and I were asked to take advantage of digital technology to encourage children to read books outside of school. We came up with two features that could be seamlessly integrated into Scholastic's existing website.</p>
-				<ul class="actions">
-					<li><a href="scholastic/" class="button fit">Learn More</a></li>
-				</ul>
-			</div>
-		</section>
-		<section class="spotlight">
-			<div class="image"><img src="cisco/images/case-study-image.png" alt="" /></div><div class="content">
-			<h2>UI Engineering:
-				Cisco</h2>
-				<p>My second position at Cisco involved creating web UI using HTML, CSS & Javascript. In my first role I created API documentation to assist developers in using out product.</p>
-				<ul class="actions">
-					<li><a href="cisco/" class="button fit">Learn More</a></li>
-				</ul>
-			</div>
-		</section>
-		<section class="spotlight">
-			<div class="image"><img src="https://raw.githubusercontent.com/erchsm/M-E/master/screenshots/case-study-image.png" alt="" /></div><div class="content">
-			<h2>Mobile Design: M&E</h2>
-			<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat. Our target audience was college students. The application allows users to plan meetups using scales such as time, date and location preferences.</p>
-			<ul class="actions">
-				<li><a href="https://github.com/erchsm/M-E/blob/master/README.md" class="button fit">Learn More</a></li>
-			</ul>
-		</div>    
-	</section>
-	<section class="spotlight">
-		<div class="image"><img src="https://raw.githubusercontent.com/erchsm/box-app/gh-pages/screenshots/case-study-image.png" alt="" /></div><div class="content">
-		<h2>Chrome Extension: Box Secure Sharing</h2>
-		<p>This Chrome Extension is designed for two Box users to securely transfer files. This was an exercise in using the Box API and crafting a experience that allows the users feel secure in transfering their files.</p>
-		<ul class="actions">
-			<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md" class="button fit">Learn More</a></li>
-		</ul>
-	</div>
-</section>
-</div>
-</section>
+		</section> -->
 
-<!-- CTA -->
-<section id="cta" class="wrapper style4">
-	<div class="inner">
-		<header>
-			<h2>I'd love to hear from you!</h2>
-			<p>Send me an email &horbar; Oh and here's my resume!</p>
-		</header>
-		<ul class="actions vertical">
-			<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf" class="button fit">My Resume</a></li>
-			<li><a href="#" class="button fit">Email Me</a></li>
-		</ul>
-	</div>
-</section>
+					<!-- CTA -->
+					<section id="cta" class="wrapper style4">
+						<div class="inner">
+							<header>
+								<h2>I'd love to hear from you!</h2>
+								<p>Send me an email &horbar; Oh and here's my resume!</p>
+							</header>
+							<ul class="actions vertical">
+								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf" class="button fit">My Resume</a></li>
+								<li><a href="#" class="button fit">Email Me</a></li>
+							</ul>
+						</div>
+					</section>
 
-<!-- Footer -->
-<footer id="footer">
-	<ul class="icons">
-		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-		<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
-		<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-		<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
-	</ul>
-</footer>
+					<!-- Footer -->
+					<footer id="footer">
+						<ul class="icons">
+							<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
+							<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
+						</ul>
+					</footer>
 
-</div>
+				</div>
 
-<!-- Scripts -->
-<script src="js/jquery.min.js"></script>
-<script src="js/jquery.scrollex.min.js"></script>
-<script src="js/jquery.scrolly.min.js"></script>
-<script src="js/skel.min.js"></script>
-<script src="js/init.js"></script>
-<script src="../node_modules/retina.js/src/retina.js"></script>
+				<!-- Scripts -->
+				<script src="js/jquery.min.js"></script>
+				<script src="js/jquery.scrollex.min.js"></script>
+				<script src="js/jquery.scrolly.min.js"></script>
+				<script src="js/skel.min.js"></script>
+				<script src="js/init.js"></script>
+				<!-- <script src="../node_modules/retina.js/src/retina.js"></script> -->
 
 
-</body>
-</html>
+			</body>
+			</html>
