--- a/wrap/index.html
+++ b/wrap/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Wrap Media: Case Study</title>
-	<!-- <link rel="shortcut icon" href="../favicon.ico" /> -->
+	<title>Wrap Media — Case Study</title>
+	<!--[if lte IE 8]><link rel="shortcut icon" href="../favicon.ico" /><![endif]-->
 	<link rel="icon" type="image/png" href="../favicon.png">
 	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/erchsm/me/gh-pages/wrap/images/banner.jpg" />
 	<meta prefix="og: http://ogp.me/ns#" />
@@ -20,6 +20,9 @@
 
 <body>
 	<script src="../js/sha256.js" type="text/javascript"></script>
+
+
+	<!-- Page Wrapper -->
 
 	<header id="header" class="alt">
 		<h1><a href="index.html"></a></h1>
@@ -48,9 +51,8 @@
 		</nav>
 	</header>
 
-	<!-- Main -->
 	<article id="main">
-		<header class="style10">
+		<header id="articleBanner" class="style10">
 			<!-- <h2>Wrap Media<span class="x">&times;</span>Widgets</h2> -->
 			<h2>The Mobile Web<span class="x">&times;</span>Wrap Media</h2>
 		</header>
@@ -63,7 +65,6 @@
 						<p>
 							A "Wrap" is essentially a mobile storytelling tool for delivering bite-sized mobile experiences in a “card-based” format. Wrap's value add as product for a small business is that they can deliver content to their users through a mobile web app that is platform agnostic and allows them to bypass the costly task of hiring a developer.  
 						</p>
-
 					</div>
 				</div>
 			</div>
@@ -71,75 +72,75 @@
 		<div class="row 0% wraps">
 
 			<!-- Loverly -->
-			<!-- <div class="wrap-loverly 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<!-- <div class="wrap wrap-loverly 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="87deae3c-5df4-4db2-b75e-3687cfd1221b">
 				</div>
 			</div> -->
 
 			<!-- Bearded Bastard -->
-			<!-- <div class="wrap-bastard 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<!-- <div class="wrap wrap-bastard 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="eefa297e-3e80-4acb-a77e-e3290bcec9ca">
 				</div>		
 			</div> -->
 			
 			<!-- Raen -->
-			<div class="wrap-raen 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap wrap-raen 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="557bf241-72a2-409f-9403-2c9aaf121aee"></div>
 			</div>
 
 			<!-- Bare -->
-			<div class="wrap-bare 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap wrap-bare 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="452c042f-bb3f-4045-90e6-5014c77745f4"></div>	
 			</div>
 
 			<!-- Valentino -->
-			<div class="wrap-valentino 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap wrap-valentino 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="c1b86368-d2e5-41d9-ad37-9e4e5b4665d9" ></div>
 			</div>
 
 			<!-- Burnello Cucineli -->
-			<div class="wrap-brunello 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap wrap-brunello 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="af08905a-73f4-40d3-afb9-65ab9e0488e3"></div>
 			</div>
 
 			<!-- Cascade-->
-			<div class="wrap-cascade 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap wrap-cascade 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="4a1d69b7-7c90-48c8-985b-3c3242562914"></div>
 			</div>
 
 			<!-- Tart Collections -->
-			<div class="wrap-tart 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap wrap-tart 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="b54374b0-85d6-406c-9acd-32c278886197"></div>
 			</div>
 
 			<!-- Lincoln -->
-			<div class="wrap-lincoln 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap wrap-lincoln 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="fa2dc570-35f8-4f8f-b4f2-c8aec852f739"></div>
 			</div>
 
 			<!-- Raen Loci -->
-			<div class="wrap-raen-loci 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap wrap-raen-loci 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="961321d8-79ea-40b0-8196-205ff1206f14"></div>
 			</div>
 
 			<!-- Sportcore -->
-			<div class="wrap-sportcore 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap wrap-sportcore 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="ffe41e95-55da-4985-a219-345ede4b10ae"></div>
 			</div>
 
 			<!-- Wish Receipt -->
-			<!-- <div class="wrap-wish-receipt 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<!-- <div clwrap ass="wrap-wish-receipt 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="8cec35f7-9f7f-40a3-8a28-eda7fff5bccb" ></div>
 				<script src="http://runtime-demo.wrap.co/embed/bootstrap.js" ></script>
 			</div> -->
 			
 			<!-- Statefarm -->
-			<!-- <div class="wrap-statefarm 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<!-- <div clwrap ass="wrap-statefarm 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="0ed6732f-c5fd-40d4-80c7-79638d94d7b6"></div>
 			</div> -->
 
 			<!-- In Wrap Signup -->
-			<!-- <div class="wrap-signup 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<!-- <div clwrap ass="wrap-signup 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="3a4e4793-6c3f-4fc8-a6dd-063bd69fbdfe"></div>
 			</div> -->
 
@@ -161,70 +162,70 @@
 	<div class="row 0% wraps">
 
 		<!-- Loverly -->
-		<div class="wrap-loverly 2u 3u(xlarge) 4u(large) 6u(small) " >
+		<div class="wrap wrap-loverly 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="87deae3c-5df4-4db2-b75e-3687cfd1221b">
 			</div>
 		</div>
 
 		<!-- Spotify Artists -->
-		<div class="wrap-spotify 2u 3u(xlarge) 4u(large) 6u(small) " >
+		<div class="wrap wrap-spotify 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed " data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52" data-wrap-uncached="true">
 			</div>
 		</div>
 
 		<!-- Architect's Digest -->
-		<div class="wrap-architect 2u 3u(xlarge) 4u(large) 6u(small) " >
+		<div class="wrap wrap-architect 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="46389e61-0527-4d38-9599-836944991cf0"></div>
 		</div>
 
 		<!-- Bearded Bastard -->
-		<div class="wrap-bastard 2u 3u(xlarge) 4u(large) 6u(small) " >
+		<div class="wrap wrap-bastard 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="eefa297e-3e80-4acb-a77e-e3290bcec9ca">
 			</div>		
 		</div>
 
 		<!-- Bare -->
-		<div class="wrap-bare 2u 3u(xlarge) 4u(large) 6u(small) " >
+		<div class="wrap wrap-bare 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="452c042f-bb3f-4045-90e6-5014c77745f4"></div>	
 		</div>
 
 		<!-- Valentino -->
-		<div class="wrap-valentino 2u 3u(xlarge) 4u(large) 6u(small) " >
+		<div class="wrap wrap-valentino 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="c1b86368-d2e5-41d9-ad37-9e4e5b4665d9" ></div>
 		</div>
 
 		<!-- Burnello Cucineli -->
-		<div class="wrap-brunello 2u 3u(xlarge) 4u(large) 6u(small) " >
+		<div class="wrap wrap-brunello 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="af08905a-73f4-40d3-afb9-65ab9e0488e3"></div>
 		</div>
 
 		<!-- Cascade-->
-		<div class="wrap-cascade 2u 3u(xlarge) 4u(large) 6u(small) " >
+		<div class="wrap wrap-cascade 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="4a1d69b7-7c90-48c8-985b-3c3242562914"></div>
 		</div>
 
 		<!-- Tart Collections -->
-		<div class="wrap-tart 2u 3u(xlarge) 4u(large) 6u(small) " >
+		<div class="wrap wrap-tart 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="b54374b0-85d6-406c-9acd-32c278886197"></div>
 		</div>
 
 		<!-- Sportcore -->
-		<div class="wrap-sportcore 2u 3u(xlarge) 4u(large) 6u(small) " >
+		<div class="wrap wrap-sportcore 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="ffe41e95-55da-4985-a219-345ede4b10ae"></div>
 		</div>
 
 		<!-- Raen Loci -->
-		<div class="wrap-raen-loci 2u 3u(xlarge) 4u(large) 6u(small) " >
+		<div class="wrap wrap-raen-loci 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="961321d8-79ea-40b0-8196-205ff1206f14"></div>
 		</div>
 
 		<!-- Raen -->
-		<div class="wrap-raen 2u 3u(xlarge) 4u(large) 6u(small) " >
+		<div class="wrap wrap-raen 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="557bf241-72a2-409f-9403-2c9aaf121aee"></div>
 		</div>
 
 		<!-- Lincoln -->
-		<div class="wrap-lincoln 2u 3u(xlarge) 4u(large) 6u(small) " >
+		<div class="wrap wrap-lincoln 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="fa2dc570-35f8-4f8f-b4f2-c8aec852f739"></div>
 			<script src="https://wrap.co/embed/bootstrap.js" ></script>
 		</div>
@@ -251,15 +252,30 @@
 </article>
 <!-- Footer -->
 <footer id="footer">
+		<p>MORE CASE STUDIES</p>
+
 	<ul class="icons">
+		<a class="icon" href="../box">
+			<span class="icon small fa-angle-left"></span>
+			<span class="icon">Box App
+		</a>
+		<a class="icon">—</a>
+		<a class="icon" href="../perforce">
+			<span class="icon">Perforce
+			<span class="icon small fa-angle-right"></span>
+		</a>
+	</ul>
+
+	<!-- <ul class="icons small">
 		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
 		<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
 		<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 		<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
-	</ul>
+	</ul> -->
 </footer>
-
 </div>
+</div>
+
 
 <!-- Scripts -->
 <script src="https://wrap.co/embed/bootstrap.js" async defer></script>
