--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<!-- Banner -->
 		<section  id="banner">
 				<div class="inner">
-					<h2>Eric S.<br/>UI <span class="x">&times;</span> UX</h2>
+					<h2>Visual<br/><span class="x">&times;</span><br/>Digital</h2>
 					<p></p>
 				</div>
 				<div class="trigger"></div>
