--- a/wrap/index.html
+++ b/wrap/index.html
@@ -68,6 +68,17 @@
 					</div>
 				</div>
 			</div>
+<!-- 			<div class="row 0% wraps">
+				<div class="wrap wrap-raen 2u 4u(xlarge) 4u(large) 6u(small) " >
+					<div class="wrap-media-embed" data-wrap-id="557bf241-72a2-409f-9403-2c9aaf121aee"></div>
+				</div>
+				<div class="wrap wrap-raen 2u 4u(xlarge) 4u(large) 6u(small) " >
+					<div class="wrap-media-embed" data-wrap-id="557bf241-72a2-409f-9403-2c9aaf121aee"></div>
+				</div>
+				<div class="wrap wrap-raen 2u 4u(xlarge) 4u(large) 6u(small) " >
+					<div class="wrap-media-embed" data-wrap-id="557bf241-72a2-409f-9403-2c9aaf121aee"></div>
+				</div>
+			</div> -->
 		</section>
 		<div class="row 0% wraps">
 
@@ -124,9 +135,9 @@
 			</div>
 
 			<!-- Sportcore -->
-			<div class="wrap wrap-sportcore 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<!-- <div class="wrap wrap-sportcore 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="ffe41e95-55da-4985-a219-345ede4b10ae"></div>
-			</div>
+			</div> -->
 
 			<!-- Wish Receipt -->
 			<!-- <div clwrap ass="wrap-wish-receipt 2u 3u(xlarge) 4u(large) 6u(small) " >
@@ -147,7 +158,7 @@
 			
 		</div>
 	</div>
-	<section class="wrapper style5">
+	<section class="wrapper style5 card">
 		<div class="inner">
 			<div class="row">
 				<div class="12u 12u$(medium)">
@@ -252,19 +263,19 @@
 </article>
 <!-- Footer -->
 <footer id="footer">
-		<p>MORE CASE STUDIES</p>
+	<p>MORE CASE STUDIES</p>
 
 	<ul class="icons">
 		<a class="icon" href="../box">
 			<span class="icon small fa-angle-left"></span>
 			<span class="icon">Box App
-		</a>
-		<a class="icon">—</a>
-		<a class="icon" href="../perforce">
-			<span class="icon">Perforce
-			<span class="icon small fa-angle-right"></span>
-		</a>
-	</ul>
+			</a>
+			<a class="icon">—</a>
+			<a class="icon" href="../perforce">
+				<span class="icon">Perforce
+					<span class="icon small fa-angle-right"></span>
+				</a>
+			</ul>
 
 	<!-- <ul class="icons small">
 		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
