--- a/givjoy/index.html
+++ b/givjoy/index.html
@@ -186,7 +186,7 @@
 	<ul class="icons">
 		<a class="icon" href="../perforce">02. Perforce</a>
 		<a class="icon">—</a>
-		<a class="icon" href="../cisco">04. Cisco</a>
+		<a class="icon" href="../scholastic">04. Scholastic</a>
 	</ul>
 	<ul class="icons">
 		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
