--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<!-- Banner -->
 		<section  id="banner">
 				<div class="inner">
-					<h2>Visual<br/><span class="x">&times;</span><br/>Eric S.</h2>
+					<h2>Eric S.<br/>UI <span class="x">&times;</span> UX</h2>
 					<p></p>
 				</div>
 				<div class="trigger"></div>
@@ -61,7 +61,7 @@
 		</section> 
 
 		<!-- One -->
-		<section id="one" class="wrapper style5 special card">
+		<section id="one" class="wrapper style5 special">
 			<div class="inner">
 				<header class="major">
 					<h2>Hi there. I'm Eric!</h2>
