--- a/cisco/index.html
+++ b/cisco/index.html
@@ -178,6 +178,11 @@
 	<!-- Footer -->
 	<footer id="footer">
 		<ul class="icons">
+		<a class="icon" href="../scholastic">08. Box App</a>
+			<a class="icon">—</a>
+			<a class="icon" href="../perforce">02. Perforce</a>
+		</ul>
+		<ul class="icons">
 			<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
 			<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
 			<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
