--- a/wrap/index.html
+++ b/wrap/index.html
@@ -158,7 +158,7 @@
 			
 		</div>
 	</div>
-	<section class="wrapper style5 card">
+	<section class="wrapper style5">
 		<div class="inner">
 			<div class="row">
 				<div class="12u 12u$(medium)">
