--- a/wrap/index.html
+++ b/wrap/index.html
@@ -34,6 +34,9 @@
 					<div id="menu">
 						<ul>
 							<li><a href="../">Home</a></li>
+							<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
+							<li><a href="#">Contact</a></li>
+							
 							<li><a href="../wrap/">Wrap Media</a></li>
 							<li><a href="../perforce/">Perforce</a></li>
 							<li><a href="../givjoy/">GivJoy</a></li>
@@ -42,8 +45,6 @@
 							<li><a href="../cisco/">Cisco</a></li>
 							<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
 							<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md">Box</a></li>
-							<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
-							<li><a href="#">Contact</a></li>
 						</ul>
 					</div>
 				</li>
@@ -257,6 +258,23 @@
 				<div class="wrap-media-embed" data-wrap-id="3a4e4793-6c3f-4fc8-a6dd-063bd69fbdfe"></div>
 			</div> -->
 		</div>
+	</div>
+	<section class="wrapper style5">
+		<div class="inner">
+			<div class="row">
+				<div class="12u 12u$(medium)">
+					<h4>Template Wraps — Think Squarespace, but for mobile apps</h4>
+					<p>
+						A "Wrap" is essentially a mobile storytelling tool for delivering bite-sized mobile experiences in a “card-based” format. Wrap's value add as product for a small business is that they can deliver content to their users through a mobile web app that is platform agnostic and allows them to bypass the costly task of hiring a developer. 
+					</p>
+				</div>
+				
+
+			</div>
+		</div>
+	</section>
+	<div class="12u 12u$(medium)">
+		<span class="image fit"><img src="images/example_wrap.jpg" alt=""/></span>
 	</div>
 
 
