--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 						<div id="menu">
 							<ul>
 								<li><a href=".">Home</a></li>
+								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
+								<li><a href="#">Contact</a></li>
+								<!-- <li>Case Studies</li> -->
 								<li><a href="wrap/">Wrap Media</a></li>
 								<li><a href="perforce/">Perforce</a></li>
 								<li><a href="givjoy/">GivJoy</a></li>
@@ -40,8 +43,6 @@
 								<li><a href="cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
 								<li><a href="https://github.com/erchsm/box-app">Box</a></li>
-								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
-								<li><a href="#">Contact</a></li>
 							</ul>
 						</div>
 					</li>
