--- a/cisco/index.html
+++ b/cisco/index.html
@@ -21,7 +21,7 @@
 <body>
 	<script src="../js/sha256.js" type="text/javascript"></script>
 
-	<header id="header" >
+	<header id="header" class="alt">
 		<h1><a href="index.html"></a></h1>
 
 		<nav id="nav">
