--- a/wrap/index.html
+++ b/wrap/index.html
@@ -55,16 +55,19 @@
 	<article id="main">
 		<header id="articleBanner" class="style10">
 			<!-- <h2>Wrap Media<span class="x">&times;</span>Widgets</h2> -->
-			<h2>The Mobile Web<span class="x">&times;</span>Wrap Media</h2>
+			<h2>Templates<span class="x">&times;</span>Wrap Media</h2>
 		</header>
 
 		<section class="wrapper style5">
 			<div class="inner">
 				<div class="row">
 					<div class="12u 12u$(medium)">
-						<h4>These are Wraps!</h4>
-						<p>
+						<h3>What is a Wrap?</h3>
+						<p style="text-align: center;">
 							A "Wrap" is essentially a mobile storytelling tool for delivering bite-sized mobile experiences in a “card-based” format. Wrap's value add as product for a small business is that they can deliver content to their users through a mobile web app that is platform agnostic and allows them to bypass the costly task of hiring a developer.  
+						</p>
+						<p style="text-align: center;">
+							These our some examples of Wraps in the form of our "Embedded Player". Wraps can live anywhere–in an email for a marketing campaign, as an Advertisement on a site, in an SMS to a friend or just at a plain-old URL.  
 						</p>
 					</div>
 				</div>
@@ -94,7 +97,7 @@
 				<div class="wrap-media-embed" data-wrap-id="eefa297e-3e80-4acb-a77e-e3290bcec9ca">
 				</div>		
 			</div> -->
-			
+
 			<!-- Raen -->
 			<div class="wrap wrap-raen 2u 3u(xlarge) 4u(large) 6u(small) " >
 				<div class="wrap-media-embed" data-wrap-id="557bf241-72a2-409f-9403-2c9aaf121aee"></div>
@@ -163,84 +166,69 @@
 		<div class="inner">
 			<div class="row">
 				<div class="12u 12u$(medium)">
-					<h4>Template Wraps — Think Squarespace, but for mobile apps</h4>
-					<p>
-						A "Wrap" is essentially a mobile storytelling tool for delivering bite-sized mobile experiences in a “card-based” format. Wrap's value add as product for a small business is that they can deliver content to their users through a mobile web app that is platform agnostic and allows them to bypass the costly task of hiring a developer. 
+					<h3>Template Wraps — Think Squarespace, but for mobile apps</h3>
+					<p style="text-align: center;">
+						Over the course of 6 months, myself and the rest of the design team created 150+ template wraps for our customers to use. Templates gave our users a starting point in our platform and provided them some inspiration to create their own wraps. One of the biggest challenges in constructing templates was making them easy to use so that a brand/buisiness could simply swap out their content.  
+					</p>
+					<p style="text-align: center;">
+						Here's a small subset of the templates we created. Here you can see many of the common use cases for using a wrap such as commerce, brand awareness, real estate and events/conferences.
 					</p>
 				</div>
 			</div>
 		</div>
 	</section>
 	<div class="row 0% wraps">
-
-		<!-- Loverly -->
-		<div class="wrap wrap-loverly 2u 3u(xlarge) 4u(large) 6u(small) " >
-			<div class="wrap-media-embed" data-wrap-id="87deae3c-5df4-4db2-b75e-3687cfd1221b">
-			</div>
-		</div>
-
-		<!-- Spotify Artists -->
-		<div class="wrap wrap-spotify 2u 3u(xlarge) 4u(large) 6u(small) " >
-			<div class="wrap-media-embed " data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52" data-wrap-uncached="true">
-			</div>
-		</div>
-
 		<!-- Architect's Digest -->
 		<div class="wrap wrap-architect 2u 3u(xlarge) 4u(large) 6u(small) " >
 			<div class="wrap-media-embed" data-wrap-id="46389e61-0527-4d38-9599-836944991cf0"></div>
 		</div>
 
-		<!-- Bearded Bastard -->
-		<div class="wrap wrap-bastard 2u 3u(xlarge) 4u(large) 6u(small) " >
-			<div class="wrap-media-embed" data-wrap-id="eefa297e-3e80-4acb-a77e-e3290bcec9ca">
-			</div>		
+		<!-- Mod Vintage Catelog -->
+		<div class="wrap wrap-mod-vintage 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap-media-embed" data-wrap-id="fc9208ed-3588-4311-869e-38485d5fa50b"></div>
+		</div>
+		<!-- Mod Furniture Catelog -->
+		<div class="wrap wrap-mod-vintage 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap-media-embed" data-wrap-id="9ba6c110-bae8-47a8-b1dd-fb0fdd4def16"></div>
+		</div>
+		<!-- Modern Real Estate Listing -->
+		<div class="wrap wrap-mod-real-estate 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap-media-embed" data-wrap-id="cd0ee257-a877-4322-929f-a136a315c469"></div>
 		</div>
 
-		<!-- Bare -->
-		<div class="wrap wrap-bare 2u 3u(xlarge) 4u(large) 6u(small) " >
-			<div class="wrap-media-embed" data-wrap-id="452c042f-bb3f-4045-90e6-5014c77745f4"></div>	
+		<!-- Fitness Bay -->
+		<div class="wrap wrap-fitness-bay 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap-media-embed" data-wrap-id="b3ec5d83-ee13-4ccc-8395-0cd18d2f5e86"></div>
 		</div>
 
-		<!-- Valentino -->
-		<div class="wrap wrap-valentino 2u 3u(xlarge) 4u(large) 6u(small) " >
-			<div class="wrap-media-embed" data-wrap-id="c1b86368-d2e5-41d9-ad37-9e4e5b4665d9" ></div>
+		<!-- Design Event -->
+		<div class="wrap wrap-design-event 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap-media-embed" data-wrap-id="6f42f225-aa76-49d4-98d7-4f0ff316e28b"></div>
+		</div>
+		
+		<!-- Offer Deal -->
+		<div class="wrap wrap-offer-deal 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap-media-embed" data-wrap-id="c1f07ceb-b456-4df8-9cb7-0845c6c27a4c"></div>
 		</div>
 
-		<!-- Burnello Cucineli -->
-		<div class="wrap wrap-brunello 2u 3u(xlarge) 4u(large) 6u(small) " >
-			<div class="wrap-media-embed" data-wrap-id="af08905a-73f4-40d3-afb9-65ab9e0488e3"></div>
-		</div>
+		<!-- Spotify Artists -->
+		<!-- <div class="wrap wrap-spotify 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap-media-embed " data-wrap-id="dea519fa-4aca-43c1-a0e3-517f8b49ae52" data-wrap-uncached="true"></div>
+		</div> -->
 
-		<!-- Cascade-->
-		<div class="wrap wrap-cascade 2u 3u(xlarge) 4u(large) 6u(small) " >
-			<div class="wrap-media-embed" data-wrap-id="4a1d69b7-7c90-48c8-985b-3c3242562914"></div>
-		</div>
-
-		<!-- Tart Collections -->
-		<div class="wrap wrap-tart 2u 3u(xlarge) 4u(large) 6u(small) " >
-			<div class="wrap-media-embed" data-wrap-id="b54374b0-85d6-406c-9acd-32c278886197"></div>
-		</div>
-
-		<!-- Sportcore -->
-		<div class="wrap wrap-sportcore 2u 3u(xlarge) 4u(large) 6u(small) " >
-			<div class="wrap-media-embed" data-wrap-id="ffe41e95-55da-4985-a219-345ede4b10ae"></div>
-		</div>
-
-		<!-- Raen Loci -->
-		<div class="wrap wrap-raen-loci 2u 3u(xlarge) 4u(large) 6u(small) " >
-			<div class="wrap-media-embed" data-wrap-id="961321d8-79ea-40b0-8196-205ff1206f14"></div>
-		</div>
-
-		<!-- Raen -->
-		<div class="wrap wrap-raen 2u 3u(xlarge) 4u(large) 6u(small) " >
-			<div class="wrap-media-embed" data-wrap-id="557bf241-72a2-409f-9403-2c9aaf121aee"></div>
-		</div>
-
-		<!-- Lincoln -->
-		<div class="wrap wrap-lincoln 2u 3u(xlarge) 4u(large) 6u(small) " >
-			<div class="wrap-media-embed" data-wrap-id="fa2dc570-35f8-4f8f-b4f2-c8aec852f739"></div>
+		<!-- Summer Adventures -->
+		<div class="wrap wrap-summer 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap-media-embed" data-wrap-id="1e2cbf10-280a-4300-8517-52c4c7c17255"></div>
 			<script src="https://wrap.co/embed/bootstrap.js" ></script>
 		</div>
+
+
+
+		<!-- Bearded Bastard -->
+		<!-- <div class="wrap wrap-bastard 2u 3u(xlarge) 4u(large) 6u(small) " >
+			<div class="wrap-media-embed" data-wrap-id="eefa297e-3e80-4acb-a77e-e3290bcec9ca">
+			</div>		
+		</div> -->
 
 		<!-- Wish Receipt -->
 			<!-- <div class="wrap-wish-receipt 2u 3u(xlarge) 4u(large) 6u(small) " >
@@ -263,13 +251,15 @@
 		<div class="inner">
 			<div class="row">
 				<div class="12u 12u$(medium)">
-					<h4>Template Wraps — Think Squarespace, but for mobile apps</h4>
-					<p>
-						A "Wrap" is essentially a mobile storytelling tool for delivering bite-sized mobile experiences in a “card-based” format. Wrap's value add as product for a small business is that they can deliver content to their users through a mobile web app that is platform agnostic and allows them to bypass the costly task of hiring a developer. 
+					<h3>The Problem</h3>
+					<p style="text-align: center;">
+						After launching these templates into our product, we got some pretty major feedback from our users.
+
+						<ol>
+							<li>There were A LOT of templates to pick from. Our customers had trouble findind templates that interested them in terms of both functionality and style.</li>
+						</ol>
 					</p>
 				</div>
-				
-
 			</div>
 		</div>
 	</section>
