--- a/givjoy/index.html
+++ b/givjoy/index.html
@@ -31,6 +31,8 @@
 						<div id="menu">
 							<ul>
 								<li><a href="../">Home</a></li>
+								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
+								<li><a href="#">Contact</a></li>
 								<li><a href="../wrap/">Wrap Media</a></li>
 								<li><a href="../perforce/">Perforce</a></li>
 								<li><a href="../givjoy/">GivJoy</a></li>
@@ -39,18 +41,17 @@
 								<li><a href=".">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
 								<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md">Box</a></li>
-								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
-								<li><a href="#">Contact</a></li>							</ul>
-							</div>
-						</li>
-					</ul>
-				</nav>
-			</header>
+							</ul>
+						</div>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-			<!-- Main -->
-			<article id="main">
-				<header class="style2">
-					<h2>GivJoy<span class="x">&times;</span>ProtoHack</h2>
+		<!-- Main -->
+		<article id="main">
+			<header class="style2">
+				<h2>GivJoy<span class="x">&times;</span>ProtoHack</h2>
 <!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 -->					</header>
 <section class="wrapper style5">
@@ -92,12 +93,12 @@
 					<div class="6u 12u(medium)"><span class="image fit"><img src="images/team.jpg" alt="" /></span></div>
 
 					<div class="6u$ 12u$(medium)">
-						<h3>My Role in our Team</h3>
+						<h4>My Role in our Team</h4>
 						<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development experts and 1 other UX Designer besides myself. I was by far the most junior person in the team–Most of the others had been in their respective industries for 5+ years. I wanted to pull my own weight in the team and prove myself.</p>
 					</div>
 				</div>
 				<!-- <span class="image left"><img src="images/GivJoy4.jpg" alt="" /></span> -->
-				<h3>Our Initial Steps</h3>
+				<h4>Our Initial Steps</h4>
 				<p>ProtoHack has begun! In the beginning each member of the team had various assumptions about what we were going to build. Our initial steps in the process were establishing ground rules, aligning the team, creating a schedule for the day and identifying our problem. I proposed we try an activity similar to an affinity diagraming exercise to flesh out our assumptions. It was this exercise that helped us hone in our intial problem statement:</p>
 				<blockquote><span class="big">Our Users have trouble finding a unique way to spread joy to friends & family. Its time consuming to find unique gifts for them.</span></blockquote>
 				<p>The activity led us to the idea of a mobile marketplace and we hypothesized 3 different user archetypes for the platform. We decided to identify 2 groups, Joy-senders and joy-receivers on the endpoints of the application. The third archetype we hypothesized were the <strong>creatives</strong> who were the basis for the marketplace. The creatives are people who have some sort of creative talent to bring joy to other people. We decided that the platform would work based around these 3 groups.  </p>
@@ -114,7 +115,7 @@
 					<div class="4u"><span class="image fit"><img src="images/GivJoy/sender.png" alt="" /></span></div>
 					<div class="4u"><span class="image fit"><img src="images/GivJoy/sender.png" alt="" /></span></div>
 					<!-- </div> -->
-					<h3>Research</h3>
+					<h4>Research</h4>
 					<p>Myself and the other UX Designer took to the streets to get some quick validation of our concept. The questions we decided to ask focused on motivations and needs of the <strong>joy-sender</strong>.</p>
 					<ol>
 						<li>Tell us about the last time you gave a gift to someone that wasn't a special occasion. What was their reaction?</li>
@@ -129,7 +130,7 @@
 
 					</ol>
 
-					<h3>User Flow & Sketches</h3>
+					<h4>User Flow & Sketches</h4>
 					<div class="row">
 						<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/sender-flow.jpg" alt="" /></span></div>
 						<div class=" 6u$ 12u$(medium)"><blockquote>As we designed a user flow for the joy-sender we tried to take into account the insights we gained from our research.<br/><br/>The sketches we're drawn by me with help from one of the marketing individuals.</blockquote></div>
@@ -138,7 +139,7 @@
 					<p>
 						With these sketches we were able to create a low-fidelity prototype in InVision. It was at this point that we decided to stop and work on our presentation
 					</p>
-					<h3>Next Steps</h3>
+					<h4>Next Steps</h4>
 					<p>
 						I think the next steps in our process would be to validate our design with users and <strong>either</strong> iterate the joy-sender design or explore the application views of the other two personas.
 						<br/><br/>
