--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<header class="major">
 					<h2>Hi there. I'm Eric!</h2>
 					<p>
-						I'm a UX Designer and UI Engineer located in the SF Bay Area. I've coded this site with my own two hands as a way to showcase my work. Below you'll find some case studies I've worked on. For more code samples check out my github. When im not designing or coding I'm either taking photos or out enjoying some nature.
+						I'm a UX Designer and UI Engineer located in the SF Bay Area. I've coded this site with my own two hands as a way to showcase my work. Below you'll find some case studies I've worked on. For more code samples check out my github. When im not designing or coding I'm either taking photos and/or out enjoying some nature.
 					</p>
 					<p>
 						For me UX is the perfect intersection of Computer Science, Customer Service and Creative Thinking. My background in engineering and design allows me to act a bridge in communication for both designers & engineers. My experience working in a cooperative has also given me skills to excel in any team environment.
@@ -82,8 +82,8 @@
 				<section class="spotlight style-wrap ">
 					<!-- <div class="image"><img src="wrap/images/case-study-image.png" alt=""/></div> -->
 					<div class="content">
-						<h2>UI/UX Design — Wrap Media</h2>
-						<p>Created interactive mobile web experiences “aka. Wraps” on the Wrap platform. Worked as a Front-End Engineer on the visual design side of our website. Brought on as designer number 2 and fostered growth of design culture within the startup.</p>
+						<h2>UI/UX Design — Wrap Templates</h2>
+						<p>On this project I was tasked with creating template mobile web experiences “aka. Wraps” on the Wrap platform. Templates gave our users a starting point in our platform and provided them some inspiration to create their own wraps.</p>
 						<ul class="actions">
 							<li><a href="wrap/" class="button fit">Learn More</a></li>
 						</ul>
