adding a bunch mors stuff\!

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 		</section>
 
 		<!-- Two -->
-		<section id="two" class="wrapper style5">
+		<section id="two" class="wrapper style5 alt">
 			<!-- <div class="inner"> -->
-				<section class="spotlight style-wrap ">
+				<section class="spotlight style-wrap">
 					<!-- <div class="image"><img src="wrap/images/case-study-image.png" alt=""/></div> -->
 					<div class="content">
 						<h2>UI/UX Design — Wrap Templates</h2>
