--- a/wrap/index.html
+++ b/wrap/index.html
@@ -251,47 +251,45 @@
 		<div class="inner">
 			<div class="row">
 				<div class="12u 12u$(medium)">
-					<h3>The Problem</h3>
+					<h3>The Problem. More Details to come!</h3>
 					<p style="text-align: center;">
-						After launching these templates into our product, we got some pretty major feedback from our users.
+						After launching these templates into our product, we got some pretty major feedback from our users. More Details about this to come!
 
-						<ol>
+<!-- 						<ol>
 							<li>There were A LOT of templates to pick from. Our customers had trouble findind templates that interested them in terms of both functionality and style.</li>
-						</ol>
+						</ol> -->
 					</p>
 				</div>
 			</div>
 		</div>
 	</section>
-	<div class="12u 12u$(medium)">
+	<!-- <div class="12u 12u$(medium)">
 		<span class="image fit"><img src="images/example_wrap.jpg" alt=""/></span>
-	</div>
+	</div> -->
 
 
 </article>
 <!-- Footer -->
 <footer id="footer">
-	<p>MORE CASE STUDIES</p>
+	<p>NEXT CASE STUDY</p>
 
 	<ul class="icons">
-		<a class="icon" href="../box">
-			<span class="icon small fa-angle-left"></span>
-			<span class="icon">Box App
-			</a>
-			<a class="icon">—</a>
+
 			<a class="icon" href="../perforce">
-				<span class="icon">Perforce
+				<span class="icon button">Perforce X Sync
 					<span class="icon small fa-angle-right"></span>
 				</a>
 			</ul>
 
-	<!-- <ul class="icons small">
-		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-		<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
-		<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-		<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
-	</ul> -->
 </footer>
+<footer id="footer" class="alt">
+		<ul class="icons small">
+			<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+			<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
+			<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
+		</ul>
+	</footer>
 </div>
 </div>
 
