--- a/cisco/index.html
+++ b/cisco/index.html
@@ -176,14 +176,20 @@
 
 	</article>
 
-	<!-- Footer -->
-	<footer id="footer">
-		<ul class="icons">
-			<a class="icon" href="../scholastic">08. Box App</a>
-			<a class="icon">—</a>
-			<a class="icon" href="../perforce">02. Perforce</a>
-		</ul>
-		<ul class="icons">
+<footer id="footer">
+	<p>NEXT CASE STUDY</p>
+
+	<ul class="icons">
+
+			<a class="icon" href="../wrap">
+				<span class="icon button">Wrap Media X Templates
+					<span class="icon small fa-angle-right"></span>
+				</a>
+			</ul>
+
+</footer>
+<footer id="footer" class="alt">
+		<ul class="icons small">
 			<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
 			<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
 			<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
