--- a/givjoy/index.html
+++ b/givjoy/index.html
@@ -184,18 +184,25 @@
 
 <!-- Footer -->
 <footer id="footer">
+	<p>NEXT CASE STUDY</p>
+
 	<ul class="icons">
-		<a class="icon" href="../perforce">02. Perforce</a>
-		<a class="icon">—</a>
-		<a class="icon" href="../scholastic">04. Scholastic</a>
-	</ul>
-	<ul class="icons">
-		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-		<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
-		<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-		<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
-	</ul>
-</footer>
+
+		<a class="icon" href="../perforce">
+			<span class="icon button">Perforce X Sync
+				<span class="icon small fa-angle-right"></span>
+			</a>
+		</ul>
+
+	</footer>
+	<footer id="footer" class="alt">
+		<ul class="icons small">
+			<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+			<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
+			<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
+		</ul>
+	</footer>
 
 </div>
 
