--- a/perforce/index.html
+++ b/perforce/index.html
@@ -163,14 +163,17 @@
 
 					</div>
 				</div>
-				<h4>DESIGN ARTIFACTS <i class="fa fa-long-arrow-down"></i></span></h4>
+				<div class="12u$(medium)">
+					<h4>DESIGN ARTIFACTS</h4>
 
-				<ul class="actions vertical">
-					<li><a href="https://erchsm.github.io/helix-sync" class="button ">Concept Prototype</a></li>
-					<li><a href="https://github.com/erchsm/helix-sync/raw/gh-pages/test-script.pdf" class="button">Test Script</a></li>
-					<li><a href="Helix Sync Research & Synthesis.pdf" class="button">A Presentation to our PM's</a></li>
+					<ul class="actions">
+						<li><a href="https://erchsm.github.io/helix-sync" class="button ">Concept Prototype</a></li>
+						<li><a href="https://github.com/erchsm/helix-sync/raw/gh-pages/test-script.pdf" class="button">Test Script</a></li>
+						<li><a href="Helix Sync Research & Synthesis.pdf" class="button">A Presentation to our PM's</a></li>
 
-				</ul>
+					</ul>
+				</div>
+				
 			</div>
 <!-- <div class="row">
 	<div class="6u 12u$(medium)">
@@ -213,27 +216,25 @@
 
 <!-- Footer -->
 <footer id="footer">
-	<ul class="icons small">
-		<p>MORE CASE STUDIES</p>
-	</ul>
+	<p>NEXT CASE STUDY</p>
+
 	<ul class="icons">
-		<a class="icon" href="../wrap">
-			<span class="icon small fa-angle-left"></span>
-			<span class="icon">Wrap Media</span>
-		</a>
-		<a class="icon">—</a>
-		<a class="icon" href="../givjoy">
-			<span class="icon">Givjoy
-			<span class="icon small fa-angle-right"></span>
-		</a>
-	</ul>
-	<ul class="icons small">
-		<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-		<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
-		<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-		<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
-	</ul>
+
+			<a class="icon" href="../givjoy">
+				<span class="icon button">Givjoy X Protohack
+					<span class="icon small fa-angle-right"></span>
+				</a>
+			</ul>
+
 </footer>
+<footer id="footer" class="alt">
+		<ul class="icons small">
+			<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+			<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
+			<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
+		</ul>
+	</footer>
 
 </div>
 
