--- a/index.html
+++ b/index.html
@@ -188,10 +188,9 @@
 					<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
-							<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://codepen.io/erchsm" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
 							<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
 						</ul>
 					</footer>
 
