updates with new nav

--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
 </head>
 <body class="landing">
 
-	<!-- Page Wrapper -->
-	<div id="page-wrapper">
-
-		<!-- Header -->
+	<!-- Header -->
 		<header id="header" class="alt">
 			<h1><a href="/"></a></h1>
 			<nav id="nav">
@@ -38,7 +35,7 @@
 								<li><a href="wrap/">Wrap Media</a></li>
 								<li><a href="perforce/">Perforce</a></li>
 								<li><a href="givjoy/">GivJoy</a></li>
-								<li><a href="google-design/">Google Design</a></li>
+								<!-- <li><a href="google-design/">Google Design</a></li> -->
 								<li><a href="scholastic/">Scholastic</a></li>
 								<li><a href="cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
@@ -49,6 +46,11 @@
 				</ul>
 			</nav>
 		</header>
+
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
+
+		
 
 		<!-- Banner -->
 		<section  id="banner">
