--- a/givjoy/index.html
+++ b/givjoy/index.html
@@ -36,7 +36,7 @@
 								<li><a href="../wrap/">Wrap Media</a></li>
 								<li><a href="../perforce/">Perforce</a></li>
 								<li><a href="../givjoy/">GivJoy</a></li>
-								<li><a href="../google-design/">Google Design</a></li>
+								<!-- <li><a href="../google-design/">Google Design</a></li> -->
 								<li><a href="../scholastic/">Scholastic</a></li>
 								<li><a href=".">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
@@ -180,8 +180,6 @@
 		</ul>
 	</div>
 </section> -->
-</article>
-
 <!-- Footer -->
 <footer id="footer">
 	<p>NEXT CASE STUDY</p>
@@ -202,6 +200,9 @@
 			<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
 		</ul>
 	</footer>
+
+</article>
+
 
 </div>
 
