--- a/wrap/index.html
+++ b/wrap/index.html
@@ -40,7 +40,7 @@
 							<li><a href="../wrap/">Wrap Media</a></li>
 							<li><a href="../perforce/">Perforce</a></li>
 							<li><a href="../givjoy/">GivJoy</a></li>
-							<li><a href="../google-design/">Google Design</a></li>
+							<!-- <li><a href="../google-design/">Google Design</a></li> -->
 							<li><a href="../scholastic/">Scholastic</a></li>
 							<li><a href="../cisco/">Cisco</a></li>
 							<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
@@ -266,9 +266,6 @@
 	<!-- <div class="12u 12u$(medium)">
 		<span class="image fit"><img src="images/example_wrap.jpg" alt=""/></span>
 	</div> -->
-
-
-</article>
 <!-- Footer -->
 <footer id="footer">
 	<p>NEXT CASE STUDY</p>
@@ -289,6 +286,9 @@
 			<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
 		</ul>
 	</footer>
+
+</article>
+
 </div>
 </div>
 
